k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels: { app: auth-service }
  template:
    metadata:
      labels: { app: auth-service }
    spec:
      containers:
      - name: auth-service
        image: docker.io/cansusharef/auth-service:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: chatapp
spec:
  selector: { app: auth-service }
  ports:
  - name: http
    port: 3001
    targetPort: 3001
