k8s/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels: { app: chat-service }
  template:
    metadata:
      labels: { app: chat-service }
    spec:
      containers:
      - name: chat-service
        image: docker.io/cansusharef/chat-service:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: chatapp
spec:
  selector: { app: chat-service }
  ports:
  - name: http
    port: 3002
    targetPort: 3002
